# rgba

./: .gitignore  Cargo.toml  LICENSE  README.md  api.h
rgba-bare/: Cargo.toml
rgba-bare/src/: config.toml  main.rs  platform.rs
rgba-cli/: Cargo.toml  README.md
rgba-cli/src/: main.rs
rgba-cli/src/platform/: dummy.rs  framebuffer.rs  mod.rs
rgba-sdl/: Cargo.toml  README.md
rgba-sdl/src/: main.rs  sdl.rs
rgba_builder/: Cargo.toml  README.md
rgba_builder/src/: lib.rs
rgba_common/: Cargo.toml  README.md
rgba_common/src/: core.rs  frontend.rs  lib.rs
rgba_core_test/: Cargo.toml
rgba_core_test/src/: lib.rs
rgba_dmg_core/: Cargo.toml  README.md
rgba_dmg_core/src/: cart.rs  cpu.rs  io.rs  joypad.rs  lib.rs  timer.rs
rgba_dmg_core/src/apu/: mod.rs  noise.rs  square.rs  wave.rs
rgba_dmg_core/src/debug/: disasm.rs  mod.rs
rgba_dmg_core/src/gpu/: mod.rs  oam.rs  render.rs  render_cgb.rs  render_dmg.rs
rgba_frontend_test/: Cargo.toml
rgba_frontend_test/src/: main.rs
rgba_gba_core/: Cargo.toml  README.md  build.rs
rgba_gba_core/src/: io.rs  irq.rs  keypad.rs  lib.rs
rgba_gba_core/src/apu/: mod.rs
rgba_gba_core/src/cpu/: arm.rs  arm_gen.py  mod.rs  thumb.rs  thumb_gen.py
rgba_gba_core/src/debug/: disasm.rs  mod.rs
rgba_gba_core/src/gpu/: io.rs  memory.rs  mod.rs  mode0.rs  mode1.rs  mode2.rs  mode3.rs  mode4.rs  render.rs  tiles.rs
rgba_gba_core/src/io/: dma.rs  macros.rs  mod.rs  timer.rs
rgba_nes_core/: Cargo.toml
rgba_nes_core/src/: lib.rs  mos6502.rs
src/: common.rs  main.rs
src/gb/: apu.rs  cart.rs  cpu.rs  io.rs  joypad.rs  mod.rs  timer.rs
src/gb/apu/: mod.rs  square.rs
src/gb/debug/: disasm.rs  mod.rs
src/gb/gpu/: mod.rs  oam.rs  render.rs
src/platform/: dummy.rs  framebuffer.rs  minifb.rs  mod.rs  sdl.rs
