[package]
name = "rgba"
version = "0.1.0"
authors = ["Louise"]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto   = true
debug-assertions = false
panic = 'unwind'

[features]
sdl = ["sdl2"]
framebuffer = ["minifb"]

[dependencies]
log = "~0.4.0-rc.1"
env_logger = "~0.5.0-rc.1"
clap = "*"
readline = "~0.0.12"
minifb = { version = "0.10.3", optional = true }
sdl2 = { version = "~0.31.0", optional = true }