[package]
name = "rgba-bare"
version = "0.0.1"
edition = "2018"
authors = ["Louise"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto   = false
debug-assertions = false
panic = 'unwind'

[dependencies]
rgba_common = { path = '../rgba_common' }
rgba_builder = { path = '../rgba_builder' }

log = "~0.4.0"
readline = "~0.0.12"
simplelog = "0.4.4"
clap = "~2.29.0"
libc = "0.2.58"
memmap = "0.7.0"
