[package]
name = "rgba-sdl"
version = "1.0.0"
authors = ["Louise"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto   = true
debug-assertions = false
panic = 'unwind'

[dependencies]
rgba_common = { path = '../rgba_common' }
rgba_builder = { path = '../rgba_builder' }

log = "~0.4.0"
readline = "~0.0.12"
simplelog = "0.4.4"
clap = "~2.29.0"

sdl2 = "~0.31.0"
