[package]
name = "rgba-sdl"
version = "2.0.0"
edition = "2018"
authors = ["Louise"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto   = false
debug-assertions = false
panic = 'unwind'

[dependencies]
rgba_common = { path = '../rgba_common' }

log = "0.4.6"
rustyline = "5.0.0"
simplelog = "0.6.0"
clap = "2.33.0"

sdl2 = "0.32.2"
