[package]
name = "rgba_dmg_core"
version = "1.1.0"
authors = ["Louise"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto   = true
debug-assertions = false
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = true

[dependencies]
rgba_common = { path = '../rgba_common' }
log = "~0.4.0"
