[package]
name = "rgba_dmg_core"
version = "2.0.0"
edition = "2018"
authors = ["Louise"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
panic = 'abort'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto   = true
debug-assertions = false
panic = 'abort'

[profile.bench]
opt-level = 3
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rgba_common = { path = '../rgba_common' }
log = "~0.4.0"
libc = "0.2.62"
simplelog = "0.7.3"
